# reflex

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json  txtx.yml
examples/client/: claim_fees.rs  claim_rewards.rs  create_market_vault.rs  helpers.rs  initialize.rs  main.rs  settle_market.rs  stake_outcome_tokens.rs  withdraw_treasury.rs
src/: constants.rs  errors.rs  lib.rs  test.rs
src/instructions/: initialize.rs  mod.rs
src/instructions/authority/: initialize.rs  mod.rs  settle_market.rs  update_config.rs  withdraw_treasury.rs
src/instructions/briber/: add_incentives.rs  cancel_market.rs  claim_fees.rs  create_market.rs  create_market_vault.rs  mod.rs
src/instructions/farmer/: claim_rewards.rs  mod.rs  stake_outcome_token.rs  unstake_outcome_token.rs
src/states/: config.rs  farmer_position.rs  market.rs  market_vault.rs  mod.rs
src/tests/: main.rs  mod.rs  test_helpers.rs
src/tests/instructions/: add_incentives_test.rs  cancel_market_test.rs  claim_fees_test.rs  claim_rewards_test.rs  create_market_vault.rs  create_market_vault_test.rs  initialize.rs  initialize_test.rs  mod.rs  settle_market_test.rs  stake_outcome_tokens.rs  update_config_test.rs  (+3 more)
src/utils/: constants.rs  macros.rs  math.rs  mod.rs
tests/: reflex.test.ts
tests/instructions/: add_incentives.ts  cancel_market.ts  claim_fees.ts  claim_rewards.ts  create_market.ts  initialize.ts  settle_market.ts  stake_outcome_token.ts  unstake_outcome_token.ts  update_config.ts  withdraw_treasury.ts
tests/utils/: accounts.ts  client.ts  constants.ts  mint.ts  pda.ts  tx.ts
(+7 files in other folders)
