[package]
name = "reflex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = "0.10.2"
pinocchio-associated-token-account = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
solana-address = { version = "2.2.0", features = ["curve25519"] }
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
mollusk-svm = "0.10.3"
solana-account = "3.4.0"
solana-instruction = "3.2.0"
