[package]
name = "reflex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = "0.10.2"
pinocchio-associated-token-account = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
solana-address = { version = "2.2.0", features = ["curve25519"] }
thiserror = { version = "2.0.18", default-features = false }
pinocchio-log = "0.5.1"

[dev-dependencies]
mollusk-svm = "0.10.3"
mollusk-svm-bencher = "0.10.3"
mollusk-svm-programs-token = "0.10.3"
solana-account = "3.4.0"
solana-client = "3.1.9"
solana-instruction = "3.2.0"
solana-keypair = "3.1.1"
solana-program = "4.0.0"
solana-signer = "3.0.0"
spl-token = "9.0.0"
