[package]
name = "reflex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = "0.10.2"
pinocchio-associated-token-account = "0.3.0"
pinocchio-log = "0.5.1"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
solana-address = { version = "2.3.0", features = ["curve25519"] }
